--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -6,23 +6,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/ext-all.js"></script>
     <script type="text/javascript">
 
-        var sessionsPanel = Ext.create('Ext.Panel', {
-            html: 'Sessions Panel',
-            flex: 2
-        });
-
-        var speakersPanel = Ext.create('Ext.Panel', {
-            html: 'Speakers Panel',
-            flex: 1
-        });
-
-        var combinedSessionSpeaker = Ext.create("Ext.Panel", {
-            layout: {
-                type: 'vbox'
-            },
-            items: [ { xtype: 'panel', }, speakersPanel]
-        });
-
         Ext.application({
             name: 'MyApp',
             launch: function() {
@@ -43,6 +26,9 @@
                                     xtype: 'panel',
                                     html:'<b>Sessions Panel</b>',
                                     flex: 2
+                                }, {
+                                    xtype: 'splitter',
+                                    width: 1 // <== This is a work around for ExtJS 4 bug
                                 },
                                 {
                                     xtype: 'panel',
@@ -50,6 +36,8 @@
                                     flex: 1
                                 }
                             ]
+                        }, {
+                            xtype: 'splitter'
                         },
                         {
                             xtype: 'panel',
