--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -10,7 +10,9 @@
             name: 'MyApp',
             launch: function() {
 
-                var sessionGridPanel = Ext.create("Ext.grid.Panel", {
+                Ext.define("SessionGridPanel", {
+                    extend: 'Ext.grid.Panel',         // <== this is the way to extend grid panel and create our own
+                    alias: 'widget.sessiongridpanel', // <== assigning an alias allows us to later refer to this using xtype
                     store: {
                         fields: ['id', 'title', 'approved'],
                         data: [
@@ -22,14 +24,21 @@
                     columns: [
                         {
                             xtype: 'gridcolumn',
+                            text: 'Id',
                             dataIndex: 'id'
                         },
                         {
                             xtype: 'gridcolumn',
-                            dataIndex: 'title'
+                            text: 'Title',
+                            dataIndex: 'title',
+                            flex: 1, // <== assigning flex parameter here but not for other columns
+                                // makes this column auto expand.
+                            minWidth: 100,
+                            width: 75
                         },
                         {
                             xtype: 'gridcolumn',
+                            text: 'Approved',
                             dataIndex: 'approved'
                         }
                     ]
@@ -50,10 +59,11 @@
                             flex: 1, // <== Without this 'flex' attribute collapsing the
                                      // center panel doesn't expand left panel.
                             items: [
-                                sessionGridPanel
-                                , {
-                                    xtype: 'splitter',
-                                    width: 1 // <== This is a work around for ExtJS 4 bug
+                                {
+                                    xtype: 'sessiongridpanel',
+                                    flex: 3
+                                }, {
+                                    xtype: 'splitter'
                                 },
                                 {
                                     xtype: 'panel',
