--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -14,7 +14,12 @@
                     extend: 'Ext.grid.Panel',         // <== this is the way to extend grid panel and create our own
                     alias: 'widget.sessiongridpanel', // <== assigning an alias allows us to later refer to this using xtype
                     store: {
-                        fields: ['id', 'title', 'approved'],
+                        fields: ['id',
+                            {
+                                name: 'title',
+                                sortType: 'asUCText'  // <== case independent sorting
+                            },
+                            'approved'],
                         autoLoad: true, // <== load the data the first time
                         autoSync: true, // <== when data in grid is changed, the store will be update
                         proxy: {
@@ -24,7 +29,11 @@
                                 type: 'json',
                                 root: 'data'
                             }
-                        }
+                        },
+                        sorters: [ // <== Defines default sort columns
+                            {property: 'approved'},
+                            {property: 'title'}
+                        ]
                     },
                     columns: [
                         {
