Added a datetime field and grouping feature to the grid

--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -19,7 +19,24 @@
                                 name: 'title',
                                 sortType: 'asUCText'  // <== case independent sorting
                             },
-                            'approved'],
+                            'approved',
+                            'level',
+                            {
+                                dateFormat: 'c',  // <== says it is ISO date format
+                                name: 'sessionTimeDateTime',
+                                sortType: 'asDate',
+                                type: 'date'
+                            },
+                            {
+                                convert: function(v, rec) {
+                                    var convertIt = Ext.util.Format.dateRenderer('m/d/Y g:i a'),
+                                           pretty = convertIt(rec.get("sessionTimeDateTime"));
+                                    return pretty;
+                                },
+                                name: 'sessionTimePretty',
+                                type: 'string'
+                            }
+                        ],
                         autoLoad: true, // <== load the data the first time
                         autoSync: true, // <== when data in grid is changed, the store will be update
                         proxy: {
@@ -33,7 +50,8 @@
                         sorters: [ // <== Defines default sort columns
                             {property: 'approved'},
                             {property: 'title'}
-                        ]
+                        ],
+                        groupField: 'level' // <== defines
                     },
                     columns: [
                         {
@@ -49,13 +67,24 @@
                                 // makes this column auto expand.
                             minWidth: 100,
                             width: 75
-                        },
-                        {
+                        },{
+                            xtype: 'gridcolumn',
+                            text: 'Level',
+                            dataIndex: 'level'
+                        },{
                             xtype: 'gridcolumn',
                             text: 'Approved',
                             dataIndex: 'approved'
+                        },
+                        {
+                            dataIndex: 'sessionTimePretty',
+                            text: 'Session Start Time',
+                            width: 180
                         }
-                    ]
+                    ],
+                    features: [{
+                        ftype: 'grouping'
+                    }]
 
                 });
 
