Made a form pop up on grid row double click

--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -10,9 +10,42 @@
             name: 'MyApp',
             launch: function() {
 
+                Ext.define("SessionForm", {
+                    extend: 'Ext.window.Window',
+                    alias: 'widget.sessionform',
+                    padding: 5,
+                    width: 600,
+                    title: 'Edit Sessions',
+                    model: true,
+                    items: [
+                        {
+                            xtype: 'form',
+                            bodyPadding: 10,
+                            title: "",
+                            defaults: {
+                                labelWidth: 90,
+                                margin: '0 0 10 0',
+                                anchor: '90%'
+                            },
+                            items: [
+                                { xtype: 'textfield', name: 'title', fieldLabel: 'Title' },
+                                { xtype: 'checkboxfield', name: 'approved', fieldLabel: 'Approved'}
+                            ]
+                        }
+                    ]
+                });
+
                 Ext.define("SessionGridPanel", {
                     extend: 'Ext.grid.Panel',         // <== this is the way to extend grid panel and create our own
                     alias: 'widget.sessiongridpanel', // <== assigning an alias allows us to later refer to this using xtype
+                    listeners: {
+                        itemdblclick: function(gridpanel, record, item, index, e) {   // <== Look at the documentation for
+                                                                                      // Ext.grid.panel to find out the argument
+                            var formWindow = Ext.create('SessionForm');
+                            formWindow.show();
+
+                        }
+                    },
                     store: {
                         fields: ['id',
                             {
