--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -31,6 +31,34 @@
                                 { xtype: 'textfield', name: 'title', fieldLabel: 'Title' },
                                 { xtype: 'checkboxfield', name: 'approved', fieldLabel: 'Approved'}
                             ]
+                        },
+                        {
+                            xtype: 'container',
+                            padding: '10 10 10 10',
+                            layout: {
+                                type: 'hbox',
+                                align: 'middle',
+                                pack: 'center',
+                            },
+                            items: [
+                                {
+                                    xtype: 'button',
+                                    text: 'Save',
+                                    margin: '5 5 5 5',
+                                    handler: function(button) {
+                                        var form = button.up('window').down('form');
+                                        form.updateRecord();
+                                        button.up('window').destroy();
+                                    }
+                                }, {
+                                    xtype: 'button',
+                                    text: 'Cancel',
+                                    margin: '5 5 5 5',
+                                    handler: function(button) {
+                                        button.up('window').destroy();
+                                    }
+                                }
+                            ]
                         }
                     ]
                 });
@@ -42,6 +70,8 @@
                         itemdblclick: function(gridpanel, record, item, index, e) {   // <== Look at the documentation for
                                                                                       // Ext.grid.panel to find out the argument
                             var formWindow = Ext.create('SessionForm');
+                            var form = formWindow.down('form');     // <== using xtype in 'down'
+                            form.loadRecord(record);
                             formWindow.show();
 
                         }
