Refactor the code to put the views in their own js files

--- a/ExtJSLessons/extjs/src/main/resources/static/index.html
+++ b/ExtJSLessons/extjs/src/main/resources/static/index.html
@@ -4,197 +4,7 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/resources/ext-theme-classic/ext-theme-classic-all.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/ext-all-debug.js"></script>
-    <script type="text/javascript">
-
-        Ext.application({
-            name: 'MyApp',
-            launch: function() {
-
-                Ext.define("SessionForm", {
-                    extend: 'Ext.window.Window',
-                    alias: 'widget.sessionform',
-                    padding: 5,
-                    width: 600,
-                    title: 'Edit Sessions',
-                    model: true,
-                    items: [
-                        {
-                            xtype: 'form',
-                            bodyPadding: 10,
-                            title: "",
-                            defaults: {
-                                labelWidth: 90,
-                                margin: '0 0 10 0',
-                                anchor: '90%'
-                            },
-                            items: [
-                                { xtype: 'textfield', name: 'title', fieldLabel: 'Title', allowBlank: false },
-                                { xtype: 'checkboxfield', name: 'approved', fieldLabel: 'Approved'}
-                            ]
-                        },
-                        {
-                            xtype: 'container',
-                            padding: '10 10 10 10',
-                            layout: {
-                                type: 'hbox',
-                                align: 'middle',
-                                pack: 'center',
-                            },
-                            items: [
-                                {
-                                    xtype: 'button',
-                                    text: 'Save',
-                                    formBind: true, // <== Disables the button if the form is invalid. Hmm! Doesn't appear to work
-                                    margin: '5 5 5 5',
-                                    handler: function(button) {
-                                        var form = button.up('window').down('form');
-                                        form.updateRecord();
-                                        button.up('window').destroy();
-                                    }
-                                }, {
-                                    xtype: 'button',
-                                    text: 'Cancel',
-                                    margin: '5 5 5 5',
-                                    handler: function(button) {
-                                        button.up('window').destroy();
-                                    }
-                                }
-                            ]
-                        }
-                    ]
-                });
-
-                Ext.define("SessionGridPanel", {
-                    extend: 'Ext.grid.Panel',         // <== this is the way to extend grid panel and create our own
-                    alias: 'widget.sessiongridpanel', // <== assigning an alias allows us to later refer to this using xtype
-                    listeners: {
-                        itemdblclick: function(gridpanel, record, item, index, e) {   // <== Look at the documentation for
-                                                                                      // Ext.grid.panel to find out the argument
-                            var formWindow = Ext.create('SessionForm');
-                            var form = formWindow.down('form');     // <== using xtype in 'down'
-                            form.loadRecord(record);
-                            formWindow.show();
-
-                        }
-                    },
-                    store: {
-                        fields: ['id',
-                            {
-                                name: 'title',
-                                sortType: 'asUCText'  // <== case independent sorting
-                            },
-                            'approved',
-                            'level',
-                            {
-                                dateFormat: 'c',  // <== says it is ISO date format
-                                name: 'sessionTimeDateTime',
-                                sortType: 'asDate',
-                                type: 'date'
-                            },
-                            {
-                                convert: function(v, rec) {
-                                    var convertIt = Ext.util.Format.dateRenderer('m/d/Y g:i a'),
-                                           pretty = convertIt(rec.get("sessionTimeDateTime"));
-                                    return pretty;
-                                },
-                                name: 'sessionTimePretty',
-                                type: 'string'
-                            }
-                        ],
-                        autoLoad: true, // <== load the data the first time
-                        autoSync: true, // <== when data in grid is changed, the store will be update
-                        proxy: {
-                            type: 'rest',
-                            url: '/sessions/all.json',
-                            reader: {
-                                type: 'json',
-                                root: 'data'
-                            }
-                        },
-                        sorters: [ // <== Defines default sort columns
-                            {property: 'approved'},
-                            {property: 'title'}
-                        ],
-                        groupField: 'level' // <== defines
-                    },
-                    columns: [
-                        {
-                            xtype: 'gridcolumn',
-                            text: 'Id',
-                            dataIndex: 'id'
-                        },
-                        {
-                            xtype: 'gridcolumn',
-                            text: 'Title',
-                            dataIndex: 'title',
-                            flex: 1, // <== assigning flex parameter here but not for other columns
-                                // makes this column auto expand.
-                            minWidth: 100,
-                            width: 75
-                        },{
-                            xtype: 'gridcolumn',
-                            text: 'Level',
-                            dataIndex: 'level'
-                        },{
-                            xtype: 'gridcolumn',
-                            text: 'Approved',
-                            dataIndex: 'approved'
-                        },
-                        {
-                            dataIndex: 'sessionTimePretty',
-                            text: 'Session Start Time',
-                            width: 180
-                        }
-                    ],
-                    features: [{
-                        ftype: 'grouping'
-                    }]
-
-                });
-
-                Ext.create("Ext.container.Viewport", {
-                    layout: {
-                        type: 'border' // <== better than hbox in general because has more capability
-                    },
-                    items: [
-                        {
-                            region: 'west',
-                            layout: {
-                                type: 'vbox',
-                                align: 'stretch'
-                            },
-                            flex: 1, // <== Without this 'flex' attribute collapsing the
-                                     // center panel doesn't expand left panel.
-                            items: [
-                                {
-                                    xtype: 'sessiongridpanel',
-                                    flex: 3
-                                }, {
-                                    xtype: 'splitter'
-                                },
-                                {
-                                    xtype: 'panel',
-                                    html:'<b>Speakers panel</b>',
-                                    flex: 2
-                                }
-                            ]
-                        },
-                        {
-                            region: 'center', //<== All 'border' layout should have a center
-                            xtype: 'panel',
-                            html:'<b>Details panel</b>',
-                            flex: 1,
-                            title: 'Details panel',
-                            collapsible: true,
-                            collapsed: true,
-                            collapseDirection: 'right'
-                        }
-                    ]
-                });
-            }
-        });
-
-    </script>
+    <script src="app.js" type="text/javascript"></script>
 </head>
 <body>
 </body>
